order 3, fixed alignment

--- a/public/css/order-style.css
+++ b/public/css/order-style.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
 .middle-div {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 60%;
@@ -11,8 +14,14 @@
     border-radius: 5px;
   }
 
-  .left {
+  .order-left-align {
     justify-content: flex-start;
     align-items: flex-start;
     text-align: left;
+  }
+
+  .order-right-align {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
   }
